assets/css/styles.css
/* Coding Institute DEI Project */
/* paulabes */
/* 25/11/2024 */

/* Bangers - google font */

@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');

body {
    padding: 2%;
}

/* font styles */

h1,
h2,
.navbar-brand {
    font-family: 'Bangers', cursive;
    font-size: 2.2rem;
    color: #f0f0f0;
    margin: 0;
    padding: 0;
}

p {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
}

h1 {
    font-size: 3.2rem;
}

h2 {
    font-size: 2rem;
    margin-bottom: 1rem;
}

h3 {
    font-family: Arial, Helvetica, sans-serif;
    font: 1.2rem bold;
    margin-bottom: 1rem;
}

ul>li {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
}

/* navbar */

.navbar-toggler {
    border: none !important;
    outline: none !important;
    box-shadow: none !important; 
  } 

/* buttons */

.btn {
    margin-bottom: 20px;
    border-radius: 0px;
    padding: 10px 15px 20px 20px;
}

/* media queries */

@media (min-width: 768px) {}

@media (max-width: 992px) {}

